# Z-Game

./: .gitignore  CMakeLists.txt
include/: Shader.h
src/: Shader.cpp  main.cpp
src/shaders/: fragment.frag  vertex.vert
